# fn_graph

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  coverage.sh  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
examples/: simple.rs
src/: data_access.rs  edge.rs  edge_counts.rs  edge_id.rs  fn_graph.rs  fn_graph_builder.rs  fn_graph_stream_opts.rs  fn_graph_stream_outcome.rs  fn_graph_stream_progress.rs  fn_id.rs  fn_id_inner.rs  fn_ref.rs  fn_ref_mut.rs  fn_wrapper.rs  fn_wrapper_mut.rs  graph_info.rs  lib.rs  rank.rs  stream_opts.rs  stream_order.rs  stream_outcome.rs  stream_progress.rs  stream_progress_state.rs  type_ids.rs
src/data_access/: r.rs  w.rs
src/fn_graph_builder/: data_edge_augmenter.rs  predecessor_count_calc.rs  rank_calc.rs
