[package]
name = "fn_graph"
version = "0.12.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Dynamically managed function graph execution."
repository = "https://github.com/azriel91/fn_graph"
documentation = "https://docs.rs/fn_graph/"
readme = "README.md"
keywords = ["async", "batch", "dispatch", "function", "graph"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.4.2"
daggy = { version = "0.8.0", default-features = false }
fn_meta = { version = "0.7.3", optional = true, features = ["fn_meta_ext"] }
interruptible = { version = "0.2.1", optional = true, features = ["stream"] }
resman = { version = "0.17", optional = true, features = ["debug"] }
futures = { version = "0.3.30", optional = true }
serde = { version = "1.0.197", optional = true, features = ["derive"] }
smallvec = "1.13"
tokio = { version = "1.36", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"

[dev-dependencies]
resman = { version = "0.17", features = ["debug", "fn_res", "fn_res_mut", "fn_meta"] }
tokio = { version = "1.36", features = ["macros", "rt", "sync", "time"] }
serde_yaml = "0.9.32"

[features]
default = ["async"]
async = ["futures"]
graph_info = ["dep:serde", "daggy/serde-1"]
interruptible = ["dep:interruptible"]
fn_res = ["resman?/fn_res"]

[[example]]
name = "simple"
required-features = ["fn_meta"]
