[package]
name = "fn_graph"
version = "0.17.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2024"
description = "Runs interdependent logic concurrently, starting each function when predecessors have completed."
repository = "https://github.com/azriel91/fn_graph"
documentation = "https://docs.rs/fn_graph/"
readme = "README.md"
keywords = ["async", "batch", "dispatch", "function", "graph"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
daggy = { version = "0.9.0", default-features = false }
fixedbitset = "0.5.7"
fn_meta = { version = "0.8.0", optional = true, features = ["fn_meta_ext"] }
interruptible = { version = "0.2.4", optional = true, features = ["stream"] }
resman = { version = "0.19", optional = true, features = ["debug"] }
futures = { version = "0.3.31", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
smallvec = "1.15"
tokio = { version = "1.44", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"

[dev-dependencies]
resman = { version = "0.19", features = ["debug", "fn_res", "fn_res_mut", "fn_meta"] }
tokio = { version = "1.44", features = ["macros", "rt", "sync", "time"] }
serde_yaml_ng = "0.10.0"

[features]
default = ["async"]
async = ["futures"]
graph_info = ["dep:serde", "daggy/serde-1"]
interruptible = ["dep:interruptible"]
fn_res = ["resman?/fn_res"]

[[example]]
name = "simple"
required-features = ["fn_meta"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
